--- a/index.html
+++ b/index.html
@@ -1,16 +1,94 @@
-<!DOCTYPE HTML>
+<!doctype html>
+<html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hipster Hacker | Welcome</title>
+    <link rel="stylesheet" href="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+    <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/app.css">
+  </head>
+  <body>
 
-<html>
+    <!-- Start Top Bar -->
+    <div class="top-bar">
+      <div class="top-bar-left">
+        <ul class="menu">
+          <li class="menu-text">Hipster Hacker Co</li>
+        </ul>
+      </div>
+      <div class="top-bar-right">
+        <ul class="menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="about.html">About me</a></li>
+        </ul>
+      </div>
+    </div>
+    <!-- End Top Bar -->
 
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <link rel="stylesheet" href="style.css">
-  <title>My First Website</title>
-</head>
+    <div class="callout large primary">
+      <div class="row column text-center">
+        <h1>My Blog</h1>
+      </div>
+    </div>
 
-<body>
-  <h1>Hello World</h1>
-  <p>I'm David, and I attend the Craft Academy Bootcamp</p>
-</body>
+    <div class="row" id="content">
+      <div class="medium-8 columns">
+        <div class="blog-post">
+          <h3>My first blog-post <small>(7/12 - 2017)</small></h3>
+          <img class="thumbnail" src="images/three-mice.png">
+          <p>So this is my very fist blog-post in this very static first website I've published on GitHub.. hmm.. Why "Hipster Hacker" you wonder? Well, funny story.. well not haha funny but.. Ah just ask <a href="mailto:thomas@craftacademy.se">@thomas_o</a> and he'll fill you in ;)</p>
+          <div class="callout">
+            <ul class="menu simple">
+              <li><a href="#">Author: David "the Hipster Hacker" Boll</a></li>
+              <li><a href="#">Comments: 3</a></li>
+            </ul>
+          </div>
+        </div>
 
+
+      </div>
+      <div class="medium-3 columns" data-sticky-container>
+        <div class="sticky" data-sticky data-anchor="content">
+          <h4>Categories</h4>
+          <ul>
+            <li><a href="#">Cool coffeshops</a></li>
+            <li><a href="#">Amazing hats</a></li>
+          </ul>
+<!-- No need for Author
+          <h4>Authors</h4>
+          <ul>
+            <li><a href="#">Skyler</a></li>
+            <li><a href="#">Jesse</a></li>
+            <li><a href="#">Mike</a></li>
+            <li><a href="#">Holly</a></li>
+          </ul>
+        -->
+        
+        </div>
+      </div>
+    </div>
+
+<!--    No need for pagination in a static website - Lets look at this later..
+    <div class="row column">
+      <ul class="pagination" role="navigation" aria-label="Pagination">
+        <li class="disabled">Previous</li>
+        <li class="current"><span class="show-for-sr">You're on page</span> 1</li>
+        <li><a href="#" aria-label="Page 2">2</a></li>
+        <li><a href="#" aria-label="Page 3">3</a></li>
+        <li><a href="#" aria-label="Page 4">4</a></li>
+        <li class="ellipsis"></li>
+        <li><a href="#" aria-label="Page 12">12</a></li>
+        <li><a href="#" aria-label="Page 13">13</a></li>
+        <li><a href="#" aria-label="Next page">Next</a></li>
+      </ul>
+    </div>
+-->
+
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+    <script>
+      $(document).foundation();
+    </script>
+  </body>
 </html>
